src/app/component/user/components/profile/edit-profile/edit-profile.component.scss
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');

$title-font: montserrat, sans-serif;
$main-font: opensans, sans-serif;

.checkmark {
  border: 1px solid #13aa57;
  border-radius: 4px;
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;

  &::after {
    border: solid white;
    border-width: 0 2px 2px 0;
    content: "";
    display: none;
    height: 12px;
    left: 5px;
    position: absolute;
    top: 1px;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    width: 7px;
  }
}

input[type=checkbox] {
  height: 0;
  opacity: 0;
  position: absolute;
  width: 0;
}

input:checked ~ .checkmark {
  background-color: #13aa57;
}

input:checked ~ .checkmark::after {
  display: block;
}

.container {
  margin-left: 135px;
  max-width: 554px;
  box-sizing: content-box;

  .wrapper {
    border-bottom: 1px solid #e1e5e3;
    margin-top: 40px;
    padding-bottom: 40px;

    p {
      font-family: $title-font;
      font-style: normal;
      font-weight: 500;
      font-size: 24px;
      line-height: 24px;
    }

    .input-block {
      display: flex;
      flex-direction: column;

      label {
        font-family: $main-font;
        font-size: 12px;
        height: 16px;
        line-height: 16px;
        margin: 0;
      }

      input,
      textarea {
        background: #fff;
        border: 1px solid #878787;
        border-radius: 5px;
        box-sizing: border-box;
        font-family: $main-font;
        font-size: 16px;
      }

      input {
        height: 48px;
        padding: 12px 40px 12px 16px;
      }

      textarea {
        height: 115px;
        padding: 12px 16px;
      }

      span {
        font-family: $main-font;
        font-size: 10px;
        height: 12px;
        line-height: 12px;
        color: #878787;
      }

      input.ng-invalid.ng-touched,
      textarea.ng-invalid.ng-touched {
        border: 1px solid red !important;
      }

      input.ng-invalid.ng-touched + span,
      textarea.ng-invalid.ng-touched + span {
        color: red;
      }
    }
  }

  .buttons {
    display: flex;
    justify-content: flex-end;

    button {
      border: 1px solid #13aa57;
      box-sizing: border-box;
      border-radius: 5px;
      font-family: $main-font;
      font-style: normal;
      font-weight: 600;
      font-size: 16px;
      height: 48px;
      line-height: 16px;
      margin: 32px 0 16px 24px;
      width: 132px;
    }

    button:first-child {
      background: #fff;
      color: #13aa57;
    }

    button:last-child {
      background: #13aa57;
      color: #fff;
    }

    button:first-child:hover {
      border: 1px solid #056b33;
      color: #056b33;
    }

    button:first-child:disabled {
      border: 1px solid #839c94;
      color: #839c94;
    }

    button:last-child:hover {
      background: #056b33;
    }

    button:last-child:disabled {
      background: #839c94;
      border: 1px solid #839c94;
    }
  }
}

h2 {
  font-family: $title-font;
  font-style: normal;
  font-weight: 500;
  height: 48px;
  font-size: 48px;
  line-height: 48px;
  margin-bottom: 0;
  color: #494a49;
}

.privacy-wrapper {
  border-bottom: 1px solid #e1e5e3;
  margin-top: 40px;
  padding-bottom: 40px;

  .title {
    font-family: $title-font;
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 24px;
  }

  ul {
    margin-bottom: 0;
    padding: 0;
    list-style-type: none !important;

    li {
      list-style: none;
      margin-top: 28px;

      .label-wrapper {
        color: #494a49;
        cursor: pointer;
        font-family: OpenSans, sans-serif;
        font-size: 16px;
        line-height: 24px;
        margin: 0;
        position: relative;
        padding-left: 32px;
      }
    }
  }
}

@media screen and (max-width: 1024px) {
  .container {
    margin-left: 100px;
    max-width: 546px;
  }
}

@media screen and (max-width: 768px) {
  .container {
    margin-left: 63px;
    max-width: 612px;
  }
}

@media screen and (max-width: 576px) {
  .container {
    margin: 0;
    max-width: 548px;
    padding-left: 14px;
    padding-right: 14px;
  }
}

@media screen and (max-width: 320px) {
  .container {
    width: 288px;
    padding-left: 16px;
    padding-right: 16px;

    h2 {
      font-size: 32px;
      line-height: 32px;
      text-align: center;
    }

    .wrapper {
      .input-block {
        input,
        textarea {
          font-size: 14px;
        }
      }

      p {
        font-size: 16px;
      }
    }

    .buttons {
      flex-direction: column;

      button {
        margin-left: 0;
        width: 288px;
      }

      button:last-child {
        margin: 0 0 8px 0;
      }
    }

    .privacy-wrapper {
      ul {
        li {
          .label-wrapper {
            font-size: 14px;
          }
        }
      }
    }
  }
}

